--- a/cv.tex
+++ b/cv.tex
@@ -22,7 +22,7 @@
 
 \address{jasonrogena@gmail.com}
 
-\address{https://github.com/jasonrogena}
+\webpage{https://github.com/jasonrogena}
 
  \begin{resume}
 
