Format document using latexindent
Format the document using latexindent installed inside a Docker
container running the aergus/latex image[1].

1. https://hub.docker.com/r/aergus/latex

Signed-off-by: Jason Rogena <jason@rogena.me>

--- a/cv.tex
+++ b/cv.tex
@@ -20,87 +20,86 @@
 
 \address{P.O. Box 55050(00200) \\ Nairobi, Kenya \\ +254715023805}
 
-\address{jasonrogena@gmail.com}
+\address{jason@rogena.me}
 
 \webpage{https://github.com/jasonrogena}
 
- \begin{resume}
+\begin{resume}
 
-\section{PROFESSIONAL EXPERIENCE}
+	\section{PROFESSIONAL EXPERIENCE}
 
-\vspace{8pt}
-\textbf{Ona} \hfill        \textbf{July 2016 --- Present} \\
-\emph{Systems Engineer}       \hfill  Nairobi, Kenya
+	\vspace{8pt}
+	\textbf{Ona} \hfill        \textbf{July 2016 --- May 2018} \\
+	\emph{Systems Engineer}       \hfill  Nairobi, Kenya
+	\begin{itemize} \itemsep -2pt % reduce space between items
+		\item Developer Android apps used at Ona.
+		\item Mentor other Android engineers.
+		\item Help in requirements gathering for new software projects or features.
+	\end{itemize} \vspace{-4pt}
 
-\begin{itemize} \itemsep -2pt % reduce space between items
-	\item Developer Android apps used at Ona.
-	\item Maintain the company's Linux server infrastructure.
- \end{itemize} \vspace{-4pt}
+	\vspace{8pt}
+	\textbf{Sendy} \hfill        \textbf{Nov 2015 --- July 2016} \\
+	\emph{Systems Engineer}       \hfill Nairobi, Kenya
+	\begin{itemize} \itemsep -2pt % reduce space between items
+		\item Lead the development of Sendy’s mobile apps.
+		\item Maintain the company’s Java server-side source code.
+		\item Maintain the company’s Linux server infrastructure.
+		\item Offer technical support to Sendy’s customers.
+	\end{itemize} \vspace{-4pt}
 
-\vspace{8pt}
-\textbf{Sendy} \hfill        \textbf{Nov 2015 --- July 2016} \\
-\emph{Systems Engineer}       \hfill Nairobi, Kenya
+	\textbf{International Livestock Research Institute} \hfill        \textbf{July 2013 --- Oct 2015} \\
+	\emph{Systems Developer}       \hfill   Nairobi, Kenya
+	\begin{itemize} \itemsep -2pt % reduce space between items
+		\item Maintain existing custom software systems being used in ILRI’s biorepository.
+		\item Design, and develop software systems to interface with Open Data Kit for the purposes of enhanced data collection, data cleaning, data analysis and data archiving in the biorepository.
+		\item Facilitate the development and use of Open Data Kit forms in the field.
+		\item Offer techincal support to biorepository users.
+	\end{itemize} \vspace{-4pt}
 
-\begin{itemize} \itemsep -2pt % reduce space between items
-	\item Lead the development of Sendy’s mobile apps.
-	\item Maintain the company’s Java server-side source code.
-          \item Maintain the company’s Linux server infrastructure.
-	\item Offer technical support to Sendy’s customers.
- \end{itemize} \vspace{-4pt}
-
-\textbf{International Livestock Research Institute} \hfill        \textbf{July 2013 --- Oct 2015} \\
-\emph{Systems Developer}       \hfill   Nairobi, Kenya
-   \begin{itemize} \itemsep -2pt % reduce space between items
-	\item Maintain existing custom software systems being used in ILRI’s biorepository.
-	\item Design, and develop software systems to interface with Open Data Kit for the purposes of enhanced data collection, data cleaning, data analysis and data archiving in the biorepository.
-	\item Facilitate the development and use of Open Data Kit forms in the field.
-           \item Offer techincal support to biorepository users.
- \end{itemize} \vspace{-4pt}
-
-\textbf{Nokia Research Centre, UoN} \hfill \textbf{March 2012 --- May 2013} \\
-\emph{Programmer} \hfill Nairobi, Kenya
- \begin{itemize} \itemsep -2pt
-  \item  Develop mobile applications based on research hypotheses.
-   \item Test developed mobile application in the field.
-    \end{itemize} \vspace{-6pt}
+	\textbf{Nokia Research Centre, UoN} \hfill \textbf{March 2012 --- May 2013} \\
+	\emph{Programmer} \hfill Nairobi, Kenya
+	\begin{itemize} \itemsep -2pt
+		\item  Develop mobile applications based on research hypotheses.
+		\item Test developed mobile application in the field.
+	\end{itemize} \vspace{-6pt}
 
 
-\section{EDUCATION}
-\vspace{8pt}
-\textbf{University of Nairobi}  \hfill \textbf{Oct 2009- May 2013} \\
-\emph{Bachelor of Science in Computer Science} \hfill \textbf{Nairobi, Kenya}
+	\section{EDUCATION}
+	\vspace{8pt}
+	\textbf{University of Nairobi}  \hfill \textbf{Oct 2009- May 2013} \\
+	\emph{Bachelor of Science in Computer Science} \hfill \textbf{Nairobi, Kenya}
 
-\section{PROGRAMMING LANGUAGES}
-\begin{itemize} \itemsep -2pt
-\vspace {8pt}
-Java, PHP, Android
-\end{itemize}
+	\section{PROGRAMMING LANGUAGES}
+	\begin{itemize} \itemsep -2pt
+		      \vspace {8pt}
+		      Java, Go
+	\end{itemize}
 
-\section{AWARDS \& HONORS}
-\begin{itemize} \itemsep -2pt
-\item CVE-2016-3917, Android Open Source Project
-\item ESBB Travel Fellow, 2015
-\item First Class Honours, University of Nairobi, Bsc. Computer Science
-\end{itemize}
+	\section{AWARDS \& HONORS}
+	\begin{itemize} \itemsep -2pt
+		\item CVE-2016-3917, Android Open Source Project
+		\item ESBB Travel Fellow, 2015
+		\item First Class Honours, University of Nairobi, Bsc. Computer Science
+	\end{itemize}
 
-\section{PROFESSIONAL AFFILIATIONS}
-\begin{itemize} \itemsep -2pt
-\item Nairobi GNU/Linux Users Group
-\item Open Data Kit
-\item OpenSRP
-\end{itemize}
+	\section{PROFESSIONAL AFFILIATIONS}
+	\begin{itemize} \itemsep -2pt
+		\item Nairobi GNU/Linux Users Group
+		\item Open Data Kit
+		\item OpenSRP
+	\end{itemize}
 
-\section{LANGUAGES}
-\begin{itemize} \itemsep -2pt
-\vspace{8pt}
-English (Advanced), Swahili (Native)
-\end{itemize}
+	\section{LANGUAGES}
+	\begin{itemize} \itemsep -2pt
+		      \vspace{8pt}
+		      English (Advanced), Swahili (Native)
+	\end{itemize}
 
-\section{GEOGRAPHIC WORK EXPERIENCE}
-\begin{itemize} \itemsep -2pt
-\vspace{8pt}
-Kenya
-\end{itemize}
+	\section{GEOGRAPHIC WORK EXPERIENCE}
+	\begin{itemize} \itemsep -2pt
+		      \vspace{8pt}
+		      Kenya
+	\end{itemize}
 
- \end{resume}
+\end{resume}
 \end{document}
