Add SRE Lead position at Ona
Update the CV and add my Site Reliability Engineering lead job
description at Ona.

Signed-off-by: Jason Rogena <jason@rogena.me>

--- a/cv.tex
+++ b/cv.tex
@@ -29,6 +29,21 @@
 	\section{PROFESSIONAL EXPERIENCE}
 
 	\vspace{8pt}
+	\textbf{Ona} \hfill        \textbf{May 2018 --- present} \\
+	\emph{Site Reliability Engineering Lead}       \hfill  Nairobi, Kenya
+	\begin{itemize} \itemsep -2pt % reduce space between items
+		\item Ensure Ona’s production systems are in a good deployed state; well architected to ensure they are highly available, properly monitored, have deployment scripts.
+		\item Liaise with development teams to ensure their applications are fit for production.
+		\item Help development teams architect new software systems.
+		\item Facilitate DevOps for other engineers; provide documentation on how-tos and best practices for writing infrastructure automation and deployment scripts, help development teams write their automation scripts, deploy and maintain ancillary infrastructure for DevOps.
+		\item Explore new deployment strategies for development teams.
+		\item Monitor cloud infrastructure usage and costs.
+		\item Help project management teams in technical proposal writing.
+		\item Mentor other Site Reliability Team members.
+		\item Control the Site Reliability Engineering team’s quarterly roadmap.
+	\end{itemize} \vspace{-4pt}
+
+	\vspace{8pt}
 	\textbf{Ona} \hfill        \textbf{July 2016 --- May 2018} \\
 	\emph{Systems Engineer}       \hfill  Nairobi, Kenya
 	\begin{itemize} \itemsep -2pt % reduce space between items
