--- a/cv.tex
+++ b/cv.tex
@@ -1,38 +1,60 @@
-% LaTeX file for resume
-% This file uses the resume document class (res.cls)
+%% start of file `cv.tex'.
+%% Based on `template.tex` from the moderncv distribution by Xavier Danaux
+%
+% This work may be distributed and/or modified under the
+% conditions of the LaTeX Project Public License version 1.3c,
+% available at http://www.latex-project.org/lppl/.
 
-\documentclass{res}
-%\usepackage{helvetica} % uses helvetica postscript font (download helvetica.sty)
-%\usepackage{newcent}   % uses new century schoolbook postscript font
-\newsectionwidth{0pt}  % So the text is not indented under section headings
-\usepackage{fancyhdr}  % use this package to get a 2 line header
-\renewcommand{\headrulewidth}{0pt} % suppress line drawn by default by fancyhdr
-\setlength{\headheight}{24pt} % allow room for 2-line header
-\setlength{\headsep}{24pt}  % space between header and text
-\setlength{\headheight}{24pt} % allow room for 2-line header
-\pagestyle{fancy}     % set pagestyle for document
-\cfoot{}                                     % the foot is empty
-\topmargin=-0.5in % start text higher on the page
 
+\documentclass[11pt,a4paper,sans]{moderncv}   % possible options include font size ('10pt', '11pt' and '12pt'), paper size ('a4paper', 'letterpaper', 'a5paper', 'legalpaper', 'executivepaper' and 'landscape') and font family ('sans' and 'roman')
+
+% moderncv themes
+\moderncvstyle{classic}                       % style options are 'casual' (default), 'classic', 'banking', 'oldstyle' and 'fancy'
+\moderncvcolor{blue}                          % color options 'blue' (default), 'orange', 'green', 'red', 'purple', 'grey' and 'black'
+%\renewcommand{\familydefault}{\sfdefault}    % to set the default font; use '\sfdefault' for the default sans serif font, '\rmdefault' for the default roman one, or any tex font name
+\nopagenumbers{}                             % uncomment to suppress automatic page numbering for CVs longer than one page
+
+% character encoding
+\usepackage[utf8]{inputenc}                  % if you are not using xelatex ou lualatex, replace by the encoding you are using
+%\usepackage{CJKutf8}                         % if you need to use CJK to typeset your resume in Chinese, Japanese or Korean
+
+% adjust the page margins
+\usepackage[scale=0.75]{geometry}
+%\setlength{\hintscolumnwidth}{3cm}           % if you want to change the width of the column with the dates
+%\setlength{\makecvheadnamewidth}{10cm}      % for the 'classic' style, if you want to force the width allocated to your name and avoid line breaks. be careful though, the length is normally calculated to avoid any overlap with your personal info; use this at your own typographical risks...
+
+% personal data
+\name{Jason}{Rogena}
+%\title{A great man}                          % optional, remove / comment the line if not wanted
+% \address{Nairobi}{Kenya}    % optional, remove / comment the line if not wanted
+\phone[mobile]{+254 715 023 805}                     % optional, remove / comment the line if not wanted
+\email{jason@rogena.me}                          % optional, remove / comment the line if not wanted
+\homepage{jasonrogena.github.io}                    % optional, remove / comment the line if not wanted
+\social[github]{jasonrogena}                    % optional, remove / comment the line if not wanted
+%\extrainfo{additional information}            % optional, remove / comment the line if not wanted
+%\quote{The quieter you become, the more you are able to hear...}                            % optional, remove / comment the line if not wanted
+
+% to show numerical labels in the bibliography (default is to show no labels); only useful if you make citations in your resume
+%\makeatletter
+%\renewcommand*{\bibliographyitemlabel}{\@biblabel{\arabic{enumiv}}}
+%\makeatother
+
+% bibliography with mutiple entries
+%\usepackage{multibib}
+%\newcites{book,misc}{{Books},{Others}}
+%----------------------------------------------------------------------------------
+%            content
+%----------------------------------------------------------------------------------
 \begin{document}
-\thispagestyle{empty} % this page has no header
-\name{JASON A. ROGENA\\[14pt]}% the \\[12pt] adds a blank line after name
+%\begin{CJK*}{UTF8}{gbsn}                     % to typeset your resume in Chinese using CJK
+%-----       resume       ---------------------------------------------------------
+\makecvtitle
 
-\address{P.O. Box 55050(00200) \\ Nairobi, Kenya \\ +254715023805}
-
-\address{jason@rogena.me}
-
-\webpage{https://github.com/jasonrogena}
-
-\begin{resume}
-
-	\section{PROFESSIONAL EXPERIENCE}
-
-	\vspace{8pt}
-	\textbf{Ona} \hfill        \textbf{May 2018 --- present} \\
-	\emph{Site Reliability Engineering Lead}       \hfill  Nairobi, Kenya
-	\begin{itemize} \itemsep -2pt % reduce space between items
-		\item Ensure Ona’s production systems are in a good deployed state; well architected to ensure they are highly available, properly monitored, have deployment scripts.
+\section{Experience}
+\subsection{Vocational}
+\cventry{May 2018 -- current}{Site Reliability Engineering Lead}{Ona}{Nairobi, Kenya}{}{Technical lead for department maintaining Ona's infrastructure\newline{}
+	\begin{itemize}
+		\item Ensure Ona’s production systems are in a good deployed state; well architected to ensure they are highly available, properly monitored, have a reproducible deployment process.
 		\item Liaise with development teams to ensure their applications are fit for production.
 		\item Help development teams architect new software systems.
 		\item Facilitate DevOps for other engineers; provide documentation on how-tos and best practices for writing infrastructure automation and deployment scripts, help development teams write their automation scripts, deploy and maintain ancillary infrastructure for DevOps.
@@ -40,81 +62,73 @@
 		\item Monitor cloud infrastructure usage and costs.
 		\item Help project management teams in technical proposal writing.
 		\item Mentor other Site Reliability Team members.
-		\item Control the Site Reliability Engineering team’s quarterly roadmap.
-	\end{itemize} \vspace{-4pt}
-
-	\vspace{8pt}
-	\textbf{Ona} \hfill        \textbf{July 2016 --- May 2018} \\
-	\emph{Systems Engineer}       \hfill  Nairobi, Kenya
-	\begin{itemize} \itemsep -2pt % reduce space between items
+		\item Manage the Site Reliability Engineering team’s quarterly roadmap.
+	\end{itemize}}
+\cventry{July 2016 -- May 2018}{Software Engineer}{Ona}{Nairobi, Kenya}{}{Focused on maintaining Ona's Android applications\newline{}
+	\begin{itemize}
 		\item Developer Android apps used at Ona.
 		\item Mentor other Android engineers.
 		\item Help in requirements gathering for new software projects or features.
-	\end{itemize} \vspace{-4pt}
-
-	\vspace{8pt}
-	\textbf{Sendy} \hfill        \textbf{Nov 2015 --- July 2016} \\
-	\emph{Systems Engineer}       \hfill Nairobi, Kenya
-	\begin{itemize} \itemsep -2pt % reduce space between items
+	\end{itemize}}
+\cventry{Nov 2015 -- July 2016}{Systems Engineer}{Sendy}{Nairobi, Kenya}{}{Led the team maintaining Sendy's mobile applications\newline{}
+	\begin{itemize}
 		\item Lead the development of Sendy’s mobile apps.
 		\item Maintain the company’s Java server-side source code.
 		\item Maintain the company’s Linux server infrastructure.
 		\item Offer technical support to Sendy’s customers.
-	\end{itemize} \vspace{-4pt}
-
-	\textbf{International Livestock Research Institute} \hfill        \textbf{July 2013 --- Oct 2015} \\
-	\emph{Systems Developer}       \hfill   Nairobi, Kenya
-	\begin{itemize} \itemsep -2pt % reduce space between items
+	\end{itemize}}
+\cventry{July 2013 -- Oct 2015}{Systems Developer}{International Livestock Research Institute}{Nairobi, Kenya}{}{Developed software systems for ILRI's biorepository\newline{}
+	\begin{itemize}
 		\item Maintain existing custom software systems being used in ILRI’s biorepository.
 		\item Design, and develop software systems to interface with Open Data Kit for the purposes of enhanced data collection, data cleaning, data analysis and data archiving in the biorepository.
 		\item Facilitate the development and use of Open Data Kit forms in the field.
-		\item Offer techincal support to biorepository users.
-	\end{itemize} \vspace{-4pt}
-
-	\textbf{Nokia Research Centre, UoN} \hfill \textbf{March 2012 --- May 2013} \\
-	\emph{Programmer} \hfill Nairobi, Kenya
-	\begin{itemize} \itemsep -2pt
+		\item Offer technical support to biorepository users.
+	\end{itemize}}
+\cventry{March 2012 -- May 2013}{Student Programmer}{Nokia Research Centre, University of Nairobi}{Nairobi, Kenya}{}{Developed software prototypes for Nokia\newline{}
+	\begin{itemize}
 		\item  Develop mobile applications based on research hypotheses.
 		\item Test developed mobile application in the field.
-	\end{itemize} \vspace{-6pt}
+	\end{itemize}}
 
+\section{Education}
+\cventry{October 2009 -- May 2013}{Bachelor of Science in Computer Science}{University of Nairobi}{Nairobi, Kenya}{}{}  % arguments 3 to 6 can be left empty
 
-	\section{EDUCATION}
-	\vspace{8pt}
-	\textbf{University of Nairobi}  \hfill \textbf{Oct 2009- May 2013} \\
-	\emph{Bachelor of Science in Computer Science} \hfill \textbf{Nairobi, Kenya}
+\section{Awards and Honours}
+\cventry{October 2016}{CVE-2016-3917}{Android Open Source Project}{}{}{}  % arguments 3 to 6 can be left empty
+\cventry{November 2015}{Travel Fellow}{European and Middle Eastern Society for Biopreservation and Biobanking}{London, United Kingdom}{}{}  % arguments 3 to 6 can be left empty
+\cventry{May 2013}{First Class Honours}{University of Nairobi, Bsc. Computer Science}{Nairobi, Kenya}{}{}  % arguments 3 to 6 can be left empty
 
-	\section{PROGRAMMING LANGUAGES}
-	\begin{itemize} \itemsep -2pt
-		      \vspace {8pt}
-		      Java, Go
-	\end{itemize}
+\section{Computer skills}
+\cvitem{Proficient}{git, bash, GNU Linux, Ansible, Terraform, Packer, AWS, Java}
+\cvitem{Intermediate}{Go, Docker}
 
-	\section{AWARDS \& HONORS}
-	\begin{itemize} \itemsep -2pt
-		\item CVE-2016-3917, Android Open Source Project
-		\item ESBB Travel Fellow, 2015
-		\item First Class Honours, University of Nairobi, Bsc. Computer Science
-	\end{itemize}
+\section{Languages}
+\cvitem{Native}{Kiswahili}
+\cvitem{Proficient}{English}
 
-	\section{PROFESSIONAL AFFILIATIONS}
-	\begin{itemize} \itemsep -2pt
-		\item Nairobi GNU/Linux Users Group
-		\item Open Data Kit
-		\item OpenSRP
-	\end{itemize}
+\section{Interests}
+\cvitem{Distributed Systems}{Interested in novel distributed storage algorithms}
+\cvitem{Community}{An active member of the \href{https://nairobilug.or.ke}{Nairobi GNU/Linux Users Group}}
+\cvitem{Weight Lifting}{An amateur weight lifter}
 
-	\section{LANGUAGES}
-	\begin{itemize} \itemsep -2pt
-		      \vspace{8pt}
-		      English (Advanced), Swahili (Native)
-	\end{itemize}
+%\renewcommand{\listitemsymbol}{-~}            % change the symbol for lists
 
-	\section{GEOGRAPHIC WORK EXPERIENCE}
-	\begin{itemize} \itemsep -2pt
-		      \vspace{8pt}
-		      Kenya
-	\end{itemize}
+% Publications from a BibTeX file without multibib
+%  for numerical labels: \renewcommand{\bibliographyitemlabel}{\@biblabel{\arabic{enumiv}}}
+%  to redefine the heading string ("Publications"): \renewcommand{\refname}{Articles}
+%\nocite{*}
+%\bibliographystyle{plain}
+%\bibliography{publications}                   % 'publications' is the name of a BibTeX file
 
-\end{resume}
+% Publications from a BibTeX file using the multibib package
+%\section{Publications}
+%\nocitebook{book1,book2}
+%\bibliographystylebook{plain}
+%\bibliographybook{publications}              % 'publications' is the name of a BibTeX file
+%\nocitemisc{misc1,misc2,misc3}
+%\bibliographystylemisc{plain}
+%\bibliographymisc{publications}              % 'publications' is the name of a BibTeX file
 \end{document}
+
+
+%% end of file `cv.tex'.
