Add employer descriptions
Add employer descriptions to give a story behind my role, and the
environment.

Signed-off-by: Jason Rogena <jason@rogena.me>

--- a/cv.tex
+++ b/cv.tex
@@ -9,7 +9,7 @@
 \documentclass[11pt,a4paper,sans]{moderncv}   % possible options include font size ('10pt', '11pt' and '12pt'), paper size ('a4paper', 'letterpaper', 'a5paper', 'legalpaper', 'executivepaper' and 'landscape') and font family ('sans' and 'roman')
 
 % moderncv themes
-\moderncvstyle{classic}                       % style options are 'casual' (default), 'classic', 'banking', 'oldstyle' and 'fancy'
+\moderncvstyle{banking}                       % style options are 'casual' (default), 'classic', 'banking', 'oldstyle' and 'fancy'
 \moderncvcolor{blue}                          % color options 'blue' (default), 'orange', 'green', 'red', 'purple', 'grey' and 'black'
 %\renewcommand{\familydefault}{\sfdefault}    % to set the default font; use '\sfdefault' for the default sans serif font, '\rmdefault' for the default roman one, or any tex font name
 \nopagenumbers{}                             % uncomment to suppress automatic page numbering for CVs longer than one page
@@ -52,9 +52,9 @@
 
 \section{Experience}
 \subsection{Vocational}
-\cventry{May 2018 -- current}{Site Reliability Engineering Lead}{Ona}{Nairobi, Kenya}{}{Technical lead for department maintaining Ona's infrastructure\newline{}
+\cventry{May 2018 -- current}{Site Reliability Engineering Lead}{Ona}{Nairobi, Kenya}{}{Ona is a design and engineering social enterprise based in Washington DC, USA and Nairobi, Kenya. Ona builds technology that affords new opportunities for governments, international organisations, development organizations and related actors to be increasingly collaborative, data-driven, and accountable to the people they serve. Ona maintains several popular open source projects (including Onadata and OpenSRP). Ona's main SaaS offering, ona.io, serves hundreds of thousands of customers with tens of millions of data points. I am the technical lead for department maintaining Ona's infrastructure. My job description includes the following items:\newline{}
 	\begin{itemize}
-		\item Ensure Ona’s production systems are in a good deployed state; well architected to ensure they are highly available, properly monitored, have a reproducible deployment process.
+		\item Ensure Ona’s production systems are in a good deployed state; well architected to ensure they are highly available, properly monitored, performant, secure, and have a reproducible deployment process.
 		\item Liaise with development teams to ensure their applications are fit for production.
 		\item Help development teams architect new software systems.
 		\item Facilitate DevOps for other engineers; provide documentation on how-tos and best practices for writing infrastructure automation and deployment scripts, help development teams write their automation scripts, deploy and maintain ancillary infrastructure for DevOps.
@@ -64,27 +64,27 @@
 		\item Mentor other Site Reliability Team members.
 		\item Manage the Site Reliability Engineering team’s quarterly roadmap.
 	\end{itemize}}
-\cventry{July 2016 -- May 2018}{Software Engineer}{Ona}{Nairobi, Kenya}{}{Focused on maintaining Ona's Android applications\newline{}
+\cventry{July 2016 -- May 2018}{Software Engineer}{Ona}{Nairobi, Kenya}{}{Ona is a design and engineering social enterprise based in Washington DC, USA and Nairobi, Kenya. Ona builds technology that affords new opportunities for governments, international organisations, development organizations and related actors to be increasingly collaborative, data-driven, and accountable to the people they serve. Ona maintains several popular open source projects (including Onadata and OpenSRP). Ona's main SaaS offering, ona.io, serves hundreds of thousands of customers with tens of millions of data points. I focused on maintaining Ona's Android applications. My job description included the following items:\newline{}
 	\begin{itemize}
-		\item Developer Android apps used at Ona.
+		\item Develope Android apps used at Ona.
 		\item Mentor other Android engineers.
 		\item Help in requirements gathering for new software projects or features.
 	\end{itemize}}
-\cventry{Nov 2015 -- July 2016}{Systems Engineer}{Sendy}{Nairobi, Kenya}{}{Led the team maintaining Sendy's mobile applications\newline{}
+\cventry{Nov 2015 -- July 2016}{Systems Engineer}{Sendy}{Nairobi, Kenya}{}{Sendy is a logistics startup based in Nairobi, Kenya. Sendy focuses on leveraging on technology to drive a scalable logistics business. Sendy operates in three countries in the East African region (Kenya, Tanzania, and Uganda). At Sendy, I led the team maintaining Sendy's mobile applications. My job description included the following items:\newline{}
 	\begin{itemize}
 		\item Lead the development of Sendy’s mobile apps.
 		\item Maintain the company’s Java server-side source code.
 		\item Maintain the company’s Linux server infrastructure.
 		\item Offer technical support to Sendy’s customers.
 	\end{itemize}}
-\cventry{July 2013 -- Oct 2015}{Systems Developer}{International Livestock Research Institute}{Nairobi, Kenya}{}{Developed software systems for ILRI's biorepository\newline{}
+\cventry{July 2013 -- Oct 2015}{Systems Developer}{International Livestock Research Institute}{Nairobi, Kenya}{}{The International Livestock Research Institute (ILRI) is an international agricultural research institute based in Nairobi, Kenya. ILRI focuses its research on building sustainable livestock pathways out of poverty in low-income countries. ILRI works with partners worldwide to help poor people keep their farm animals alive and productive, increase and sustain their livestock and farm productivity and find profitable markets for their animal products. While at ILRI, I developed software systems for its biorepository. My job description included the following items:\newline{}
 	\begin{itemize}
 		\item Maintain existing custom software systems being used in ILRI’s biorepository.
 		\item Design, and develop software systems to interface with Open Data Kit for the purposes of enhanced data collection, data cleaning, data analysis and data archiving in the biorepository.
 		\item Facilitate the development and use of Open Data Kit forms in the field.
 		\item Offer technical support to biorepository users.
 	\end{itemize}}
-\cventry{March 2012 -- May 2013}{Student Programmer}{Nokia Research Centre, University of Nairobi}{Nairobi, Kenya}{}{Developed software prototypes for Nokia\newline{}
+\cventry{March 2012 -- May 2013}{Student Programmer}{Nokia Research Centre, University of Nairobi}{Nairobi, Kenya}{}{The Nokia Research Center lab at the University of Nairobi focused on prototyping novel ideas for the Nokia Corporation. Prototypes built by the lab were mostly for the Symbian Operating System. While at the lab, I played the role of a student programmer. My job description included the following items:\newline{}
 	\begin{itemize}
 		\item  Develop mobile applications based on research hypotheses.
 		\item Test developed mobile application in the field.
@@ -95,8 +95,8 @@
 
 \section{Awards and Honours}
 \cventry{October 2016}{CVE-2016-3917}{Android Open Source Project}{}{}{}  % arguments 3 to 6 can be left empty
-\cventry{November 2015}{Travel Fellow}{European and Middle Eastern Society for Biopreservation and Biobanking}{London, United Kingdom}{}{}  % arguments 3 to 6 can be left empty
-\cventry{May 2013}{First Class Honours}{University of Nairobi, Bsc. Computer Science}{Nairobi, Kenya}{}{}  % arguments 3 to 6 can be left empty
+\cventry{November 2015}{Travel Fellow}{ESBB}{London, United Kingdom}{}{}  % arguments 3 to 6 can be left empty
+\cventry{May 2013}{First Class Honours}{University of Nairobi, B.Sc. Computer Science}{Nairobi, Kenya}{}{}  % arguments 3 to 6 can be left empty
 
 \section{Computer skills}
 \cvitem{Proficient}{git, bash, GNU Linux, Ansible, Terraform, Packer, AWS, Java}
