Update personal site & SRE Lead tasks
Update my personal site to rogena.me since I now permanently use it. Add
managing SRE roadmap items to the list if tasks done as SRE Lead.

Signed-off-by: Jason Rogena <jason@rogena.me>

--- a/cv.tex
+++ b/cv.tex
@@ -29,7 +29,7 @@
 % \address{Nairobi}{Kenya}    % optional, remove / comment the line if not wanted
 \phone[mobile]{+254 715 023 805}                     % optional, remove / comment the line if not wanted
 \email{jason@rogena.me}                          % optional, remove / comment the line if not wanted
-\homepage{jasonrogena.github.io}                    % optional, remove / comment the line if not wanted
+\homepage{rogena.me}                    % optional, remove / comment the line if not wanted
 \social[github]{jasonrogena}                    % optional, remove / comment the line if not wanted
 %\extrainfo{additional information}            % optional, remove / comment the line if not wanted
 %\quote{The quieter you become, the more you are able to hear...}                            % optional, remove / comment the line if not wanted
@@ -63,6 +63,7 @@
 		\item Help project management teams in technical proposal writing.
 		\item Mentor other Site Reliability Team members.
 		\item Manage the Site Reliability Engineering team’s quarterly roadmap.
+		\item Manage the Site Reliability Engineering team's milestone tasks.
 	\end{itemize}}
 \cventry{July 2016 -- May 2018}{Software Engineer}{Ona}{Nairobi, Kenya}{}{Ona is a design and engineering social enterprise based in Washington DC, USA and Nairobi, Kenya. Ona builds technology that affords new opportunities for governments, international organisations, development organizations and related actors to be increasingly collaborative, data-driven, and accountable to the people they serve. Ona maintains several popular open source projects (including Onadata and OpenSRP). Ona's main SaaS offering, ona.io, serves hundreds of thousands of customers with tens of millions of data points. I focused on maintaining Ona's Android applications. My job description included the following items:\newline{}
 	\begin{itemize}
