Update Ona SRE Lead role
Update the Ona SRE Lead role to include my end date.

Signed-off-by: Jason Rogena <jason@rogena.me>

--- a/cv.tex
+++ b/cv.tex
@@ -27,8 +27,8 @@
 \name{Jason}{Rogena}
 %\title{A great man}                          % optional, remove / comment the line if not wanted
 % \address{Nairobi}{Kenya}    % optional, remove / comment the line if not wanted
-\phone[mobile]{+254 715 023 805}                     % optional, remove / comment the line if not wanted
-\email{jason@rogena.me}                          % optional, remove / comment the line if not wanted
+%\phone[mobile]{+353 (89) 000 0000}                     % optional, remove / comment the line if not wanted
+\email{null+cv@rogena.me}                          % optional, remove / comment the line if not wanted
 \homepage{rogena.me}                    % optional, remove / comment the line if not wanted
 \social[github]{jasonrogena}                    % optional, remove / comment the line if not wanted
 %\extrainfo{additional information}            % optional, remove / comment the line if not wanted
@@ -52,7 +52,7 @@
 
 \section{Experience}
 \subsection{Vocational}
-\cventry{May 2018 -- current}{Site Reliability Engineering Lead}{Ona}{Nairobi, Kenya}{}{Ona is a design and engineering social enterprise based in Washington DC, USA and Nairobi, Kenya. Ona builds technology that affords new opportunities for governments, international organisations, development organizations and related actors to be increasingly collaborative, data-driven, and accountable to the people they serve. Ona maintains several popular open source projects (including Onadata and OpenSRP). Ona's main SaaS offering, ona.io, serves hundreds of thousands of customers with tens of millions of data points. I am the technical lead for department maintaining Ona's infrastructure. My job description includes the following items:\newline{}
+\cventry{May 2018 -- December 2021}{Site Reliability Engineering Lead}{Ona}{Nairobi, Kenya}{}{Ona is a design and engineering social enterprise based in Washington DC, USA and Nairobi, Kenya. Ona builds technology that affords new opportunities for governments, international organisations, development organizations and related actors to be increasingly collaborative, data-driven, and accountable to the people they serve. Ona maintains several popular open source projects (including Onadata and OpenSRP). Ona's main SaaS offering, ona.io, serves hundreds of thousands of customers with tens of millions of data points. I was the technical lead for department maintaining Ona's infrastructure. My job description included the following items:\newline{}
 	\begin{itemize}
 		\item Ensure Ona’s production systems are in a good deployed state; well architected to ensure they are highly available, properly monitored, performant, secure, and have a reproducible deployment process.
 		\item Liaise with development teams to ensure their applications are fit for production.
