Add Meta experience, make Ona experience more brief
Add the current IC5 position at Meta. While at it make the Ona section briefer by
focusing on the impactful responsibilities as an SRE lead, and removing the company's
description from the Software Engineering section.

Signed-off-by: Jason Rogena <jrogena@fb.com>

--- a/cv.tex
+++ b/cv.tex
@@ -52,26 +52,28 @@
 
 \section{Experience}
 \subsection{Vocational}
-\cventry{May 2018 -- December 2021}{Site Reliability Engineering Lead}{Ona}{Nairobi, Kenya}{}{Ona is a design and engineering social enterprise based in Washington DC, USA and Nairobi, Kenya. Ona builds technology that affords new opportunities for governments, international organisations, development organizations and related actors to be increasingly collaborative, data-driven, and accountable to the people they serve. Ona maintains several popular open source projects (including Onadata and OpenSRP). Ona's main SaaS offering, ona.io, serves hundreds of thousands of customers with tens of millions of data points. I was the technical lead for department maintaining Ona's infrastructure. My job description included the following items:\newline{}
+\cventry{Feb 2022 -- present}{Production Engineer (IC5)}{Meta}{Dublin, Ireland}{}{Meta is a social media company that owns Facebook, Instagram, and WhatsApp, among other products and services. Meta's infrastructure fleet which spans millions of servers and millions of newtwork equipment. I am part of the team maintaining the tool-set used to monitor the reliability of the company's internal network. My job description includes the following items:\newline{}
 	\begin{itemize}
-		\item Ensure Ona’s production systems are in a good deployed state; well architected to ensure they are highly available, properly monitored, performant, secure, and have a reproducible deployment process.
-		\item Liaise with development teams to ensure their applications are fit for production.
-		\item Help development teams architect new software systems.
-		\item Facilitate DevOps for other engineers; provide documentation on how-tos and best practices for writing infrastructure automation and deployment scripts, help development teams write their automation scripts, deploy and maintain ancillary infrastructure for DevOps.
-		\item Explore new deployment strategies for development teams.
-		\item Monitor cloud infrastructure usage and costs.
-		\item Help project management teams in technical proposal writing.
-		\item Mentor other Site Reliability Team members.
-		\item Manage the Site Reliability Engineering team’s quarterly roadmap.
-		\item Manage the Site Reliability Engineering team's milestone tasks.
+		\item Write software for automating infrastructure operations for the company.
+		\item Design changes to the software stack the team I'm in maintains.
+		\item Review code changes and design proposals by other engineers.
+		\item Participate in engineering mentorship activities like diversity recruiting and mentoring newly joined engineers.
 	\end{itemize}}
-\cventry{July 2016 -- May 2018}{Software Engineer}{Ona}{Nairobi, Kenya}{}{Ona is a design and engineering social enterprise based in Washington DC, USA and Nairobi, Kenya. Ona builds technology that affords new opportunities for governments, international organisations, development organizations and related actors to be increasingly collaborative, data-driven, and accountable to the people they serve. Ona maintains several popular open source projects (including Onadata and OpenSRP). Ona's main SaaS offering, ona.io, serves hundreds of thousands of customers with tens of millions of data points. I focused on maintaining Ona's Android applications. My job description included the following items:\newline{}
+\cventry{May 2018 -- December 2021}{Site Reliability Engineering Lead}{Ona}{Nairobi, Kenya}{}{Ona is a design and engineering social enterprise based in Washington DC, USA and Nairobi, Kenya. Ona builds technology that affords new opportunities for governments, international organisations, development organizations and related actors to be increasingly collaborative, data-driven, and accountable to the people they serve. Ona maintains several popular open source projects (including Onadata and OpenSRP). Ona's main SaaS offering, ona.io, serves hundreds of thousands of customers with tens of millions of data points. My job description included the following items:\newline{}
+	\begin{itemize}
+		\item Lead the team that ensures Ona’s production systems are in a good deployed state. The leadership role involved maintaing the team's roadmap and weekly milestones.
+		\item Write software for automating infrastructure operations for the company.
+		\item Facilitate infrastructure activities (DevOps activities) done by other engineering teams.
+		\item Help project management teams in technical proposal writing.
+		\item Mentor other Site Reliability team members.
+	\end{itemize}}
+\cventry{July 2016 -- May 2018}{Software Engineer}{Ona}{Nairobi, Kenya}{}{Prior to becoming an SRE lead for the company, I focused on maintaining Ona's Android applications. My job description included the following items:\newline{}
 	\begin{itemize}
 		\item Develope Android apps used at Ona.
 		\item Mentor other Android engineers.
 		\item Help in requirements gathering for new software projects or features.
 	\end{itemize}}
-\cventry{Nov 2015 -- July 2016}{Systems Engineer}{Sendy}{Nairobi, Kenya}{}{Sendy is a logistics startup based in Nairobi, Kenya. Sendy focuses on leveraging on technology to drive a scalable logistics business. Sendy operates in three countries in the East African region (Kenya, Tanzania, and Uganda). At Sendy, I led the team maintaining Sendy's mobile applications. My job description included the following items:\newline{}
+\cventry{Nov 2015 -- July 2016}{Systems Engineer}{Sendy}{Nairobi, Kenya}{}{Sendy is a logistics startup based in Nairobi, Kenya. Sendy focuses on leveraging on technology to drive a scalable logistics business. Sendy operates in three countries in the East African region (Kenya, Tanzania, and Uganda). My job description included the following items:\newline{}
 	\begin{itemize}
 		\item Lead the development of Sendy’s mobile apps.
 		\item Maintain the company’s Java server-side source code.
