Update computer skills
Update the list of computer skills, adding what I've recently learnt.

Signed-off-by: Jason Rogena <jrogena@fb.com>

--- a/cv.tex
+++ b/cv.tex
@@ -51,7 +51,6 @@
 \makecvtitle
 
 \section{Experience}
-\subsection{Vocational}
 \cventry{Feb 2022 -- present}{Production Engineer (IC5)}{Meta}{Dublin, Ireland}{}{Meta is a social media company that owns Facebook, Instagram, and WhatsApp, among other products and services. Meta's infrastructure fleet which spans millions of servers and millions of newtwork equipment. I am part of the team maintaining the tool-set used to monitor the reliability of the company's internal network. My job description includes the following items:\newline{}
 	\begin{itemize}
 		\item Write software for automating infrastructure operations for the company.
@@ -101,9 +100,9 @@
 \cventry{November 2015}{Travel Fellow}{ESBB}{London, United Kingdom}{}{}  % arguments 3 to 6 can be left empty
 \cventry{May 2013}{First Class Honours}{University of Nairobi, B.Sc. Computer Science}{Nairobi, Kenya}{}{}  % arguments 3 to 6 can be left empty
 
-\section{Computer skills}
-\cvitem{Proficient}{git, bash, GNU Linux, Ansible, Terraform, Packer, AWS, Java}
-\cvitem{Intermediate}{Go, Docker}
+\section{Computer Skills}
+\cvitem{Proficient}{Git, Bash, GNU Linux, Ansible, Terraform, Packer, AWS, Java}
+\cvitem{Intermediate}{Go, Python, Rust, Docker, Kubernetes, Helm, GoCD}
 
 \section{Languages}
 \cvitem{Native}{Kiswahili}
@@ -112,7 +111,7 @@
 \section{Interests}
 \cvitem{Distributed Systems}{Interested in novel distributed storage algorithms}
 \cvitem{Community}{An active member of the \href{https://nairobilug.or.ke}{Nairobi GNU/Linux Users Group}}
-\cvitem{Weight Lifting}{An amateur weight lifter}
+\cvitem{Gardening}{An avid plan parent}
 
 %\renewcommand{\listitemsymbol}{-~}            % change the symbol for lists
 
