Make more changes to the company & award descriptions
Reduced the verboseness of the company descriptions and add in descriptions
for the awards I have recieved.

Signed-off-by: Jason Rogena <jrogena@fb.com>

--- a/cv.tex
+++ b/cv.tex
@@ -51,14 +51,14 @@
 \makecvtitle
 
 \section{Experience}
-\cventry{Feb 2022 -- present}{Production Engineer (IC5)}{Meta}{Dublin, Ireland}{}{Meta is a social media company that owns Facebook, Instagram, and WhatsApp, among other products and services. Meta's infrastructure fleet which spans millions of servers and millions of newtwork equipment. I am part of the team maintaining the tool-set used to monitor the reliability of the company's internal network. My job description includes the following items:\newline{}
+\cventry{Feb 2022 -- present}{Production Engineer (IC5)}{Meta}{Dublin, Ireland}{}{Meta is a social media company that owns Facebook, Instagram, and WhatsApp, among other products and services. Meta's infrastructure fleet spans millions of servers and thousands of newtwork equipment. I am part of the team maintaining the tool-set used to monitor the reliability of the company's internal network. My job description includes the following items:\newline{}
 	\begin{itemize}
 		\item Write software for automating infrastructure operations for the company.
 		\item Design changes to the software stack the team I'm in maintains.
 		\item Review code changes and design proposals by other engineers.
 		\item Participate in engineering mentorship activities like diversity recruiting and mentoring newly joined engineers.
 	\end{itemize}}
-\cventry{May 2018 -- December 2021}{Site Reliability Engineering Lead}{Ona}{Nairobi, Kenya}{}{Ona is a design and engineering social enterprise based in Washington DC, USA and Nairobi, Kenya. Ona builds technology that affords new opportunities for governments, international organisations, development organizations and related actors to be increasingly collaborative, data-driven, and accountable to the people they serve. Ona maintains several popular open source projects (including Onadata and OpenSRP). Ona's main SaaS offering, ona.io, serves hundreds of thousands of customers with tens of millions of data points. My job description included the following items:\newline{}
+\cventry{May 2018 -- December 2021}{Site Reliability Engineering Lead}{Ona}{Nairobi, Kenya}{}{Ona is a design and engineering social enterprise that builds data collection and analysis software used by governments, international organisations, development organizations and related actors. Ona maintains several popular open source projects (including Onadata and OpenSRP). Ona's main SaaS offering, ona.io, serves hundreds of thousands of customers with tens of millions of data points. My job description included the following items:\newline{}
 	\begin{itemize}
 		\item Lead the team that ensures Ona’s production systems are in a good deployed state. The leadership role involved maintaing the team's roadmap and weekly milestones.
 		\item Write software for automating infrastructure operations for the company.
@@ -79,7 +79,7 @@
 		\item Maintain the company’s Linux server infrastructure.
 		\item Offer technical support to Sendy’s customers.
 	\end{itemize}}
-\cventry{July 2013 -- Oct 2015}{Systems Developer}{International Livestock Research Institute}{Nairobi, Kenya}{}{The International Livestock Research Institute (ILRI) is an international agricultural research institute based in Nairobi, Kenya. ILRI focuses its research on building sustainable livestock pathways out of poverty in low-income countries. ILRI works with partners worldwide to help poor people keep their farm animals alive and productive, increase and sustain their livestock and farm productivity and find profitable markets for their animal products. While at ILRI, I developed software systems for its biorepository. My job description included the following items:\newline{}
+\cventry{July 2013 -- Oct 2015}{Systems Developer}{International Livestock Research Institute}{Nairobi, Kenya}{}{The International Livestock Research Institute (ILRI) is an international agricultural research institute based in Nairobi, Kenya. ILRI focuses its research on building sustainable livestock pathways out of poverty in low-income countries. While at ILRI, I developed software systems for its biorepository. My job description included the following items:\newline{}
 	\begin{itemize}
 		\item Maintain existing custom software systems being used in ILRI’s biorepository.
 		\item Design, and develop software systems to interface with Open Data Kit for the purposes of enhanced data collection, data cleaning, data analysis and data archiving in the biorepository.
@@ -96,9 +96,9 @@
 \cventry{October 2009 -- May 2013}{Bachelor of Science in Computer Science}{University of Nairobi}{Nairobi, Kenya}{}{}  % arguments 3 to 6 can be left empty
 
 \section{Awards and Honours}
-\cventry{October 2016}{CVE-2016-3917}{Android Open Source Project}{}{}{}  % arguments 3 to 6 can be left empty
-\cventry{November 2015}{Travel Fellow}{ESBB}{London, United Kingdom}{}{}  % arguments 3 to 6 can be left empty
-\cventry{May 2013}{First Class Honours}{University of Nairobi, B.Sc. Computer Science}{Nairobi, Kenya}{}{}  % arguments 3 to 6 can be left empty
+\cventry{October 2016}{CVE-2016-3917}{Android Open Source Project}{}{}{I discovered a high-severity security vulnerability in the Android Operating System.}  % arguments 3 to 6 can be left empty
+\cventry{November 2015}{Travel Fellow}{ESBB}{London, United Kingdom}{}{I won a scholarship to showcase ILRI's biorepository software stack at a conference by the European, Middle Eastern and African Society for Biopreservation and Biobanking (ESBB).}  % arguments 3 to 6 can be left empty
+\cventry{May 2013}{First Class Honours}{University of Nairobi, B.Sc. Computer Science}{Nairobi, Kenya}{}{For attaining more than 70\% in my average score for the course.}  % arguments 3 to 6 can be left empty
 
 \section{Computer Skills}
 \cvitem{Proficient}{Git, Bash, GNU Linux, Ansible, Terraform, Packer, AWS, Java}
